src/snapshots/hugr_qir__lower_qubit_ssa_vars__test__lowered_qubit_selects_and_phis@select_with_downstream_phi.snap
---
source: src/lower_qubit_ssa_vars.rs
expression: module.to_string()
---
; ModuleID = '/Users/travis.thompson/Develop/CQCL/hugr-qir/src/test_resources/ssa_lowering_pass/select_with_downstream_phi.ll'
source_filename = "select_with_downstream_phi"
target datalayout = "e-m:e-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128"
target triple = "aarch64-unknown-linux-gnu"

%Qubit = type opaque

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.select.merge.dup, label %entry.select.merge.dup1

entry.select.merge.dup:                           ; preds = %entry
  br i1 %cond1, label %merge.dup, label %merge.dup5

common.ret:                                       ; preds = %merge.dup5, %merge.dup4, %merge.dup
  ret void

merge.dup:                                        ; preds = %entry.select.merge.dup
  call void @__quantum__qis__reset__body(%Qubit* null)
  br label %common.ret

entry.select.merge.dup1:                          ; preds = %entry
  br i1 %cond1, label %merge.dup4, label %merge.dup5

merge.dup4:                                       ; preds = %entry.select.merge.dup1
  call void @__quantum__qis__reset__body(%Qubit* inttoptr (i64 1 to %Qubit*))
  br label %common.ret

merge.dup5:                                       ; preds = %entry.select.merge.dup, %entry.select.merge.dup1
  call void @__quantum__qis__reset__body(%Qubit* inttoptr (i64 2 to %Qubit*))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(%Qubit*)
