src/snapshots/hugr_qir__lower_qubit_ssa_vars__test__lowered_qubit_selects_and_phis@select_with_record_output.snap
---
source: src/lower_qubit_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:select_with_record_output>'
source_filename = "select_with_record_output"
target datalayout = "<normalized>"
target triple = "<normalized>"

%Result = type opaque
%Qubit = type opaque

@0 = private unnamed_addr constant [5 x i8] c"flag\00", align 1

define void @__hugr__.main.1() {
entry:
  %flag = tail call i1 @__quantum__qis__read_result__body(%Result* null)
  br i1 %flag, label %entry.dup, label %entry.dup1

entry.dup:                                        ; preds = %entry
  call void @__quantum__qis__reset__body(%Qubit* null)
  br label %entry.record

entry.dup1:                                       ; preds = %entry
  call void @__quantum__qis__reset__body(%Qubit* inttoptr (i64 1 to %Qubit*))
  br label %entry.record

entry.record:                                     ; preds = %entry.dup1, %entry.dup
  call void @__quantum__rt__bool_record_output(i1 %flag, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @0, i64 0, i64 0))
  ret void
}

declare i1 @__quantum__qis__read_result__body(%Result*)

declare void @__quantum__rt__bool_record_output(i1, i8*)

declare void @__quantum__qis__reset__body(%Qubit*)
