src/snapshots/hugr_qir__lower_qubit_ssa_vars__test__lowered_qubit_selects_and_phis@tail_call_result_downstream_phi.snap
---
source: src/lower_qubit_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_call_result_downstream_phi>'
source_filename = "tail_call_result_downstream_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

%Result = type opaque

@0 = private unnamed_addr constant [5 x i8] c"flag\00", align 1

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.select.merge.dup, label %entry.select.merge.dup3

entry.select.merge.dup:                           ; preds = %entry
  %flag12 = call i1 @__quantum__qis__read_result__body(%Result* null)
  br i1 %cond1, label %join, label %right

entry.select.merge.dup3:                          ; preds = %entry
  %flag14 = call i1 @__quantum__qis__read_result__body(%Result* null)
  br i1 %cond1, label %join, label %right

right:                                            ; preds = %entry.select.merge.dup3, %entry.select.merge.dup
  br label %join

join:                                             ; preds = %entry.select.merge.dup, %entry.select.merge.dup3, %right
  %phi.calluser = phi i1 [ false, %right ], [ %flag12, %entry.select.merge.dup ], [ %flag14, %entry.select.merge.dup3 ]
  tail call void @__test__consume_bool(i1 %phi.calluser)
  ret void
}

declare i1 @__quantum__qis__read_result__body(%Result*)

declare void @__test__consume_bool(i1)
