src/snapshots/hugr_qir__lower_qubit_ssa_vars__test__lowered_qubit_selects_and_phis@tail_float_casts_and_cmp.snap
---
source: src/lower_qubit_ssa_vars.rs
expression: module.to_string()
---
; ModuleID = '/Users/travis.thompson/Develop/CQCL/hugr-qir/src/test_resources/ssa_lowering_pass/tail_float_casts_and_cmp.ll'
source_filename = "tail_float_casts_and_cmp"
target datalayout = "e-m:e-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128"
target triple = "aarch64-unknown-linux-gnu"

%Qubit = type opaque

define void @__hugr__.main.1(i1 %cond, i1 %flag) {
entry:
  br i1 %cond, label %entry.select.merge.dup, label %entry.select.merge.dup11

entry.select.merge.dup:                           ; preds = %entry
  %flag.i6416 = zext i1 %flag to i64
  %flag.f6427 = uitofp i64 %flag.i6416 to double
  %flag.f3238 = fptrunc double %flag.f6427 to float
  %flag.f64.ext49 = fpext float %flag.f3238 to double
  %is.zero510 = fcmp oeq double %flag.f64.ext49, 0.000000e+00
  br i1 %is.zero510, label %left.dup, label %right.dup

common.ret:                                       ; preds = %left.dup18, %right.dup19, %left.dup, %right.dup
  ret void

right.dup:                                        ; preds = %entry.select.merge.dup
  call void @__quantum__qis__reset__body(%Qubit* null)
  br label %common.ret

left.dup:                                         ; preds = %entry.select.merge.dup
  call void @__quantum__qis__reset__body(%Qubit* null)
  br label %common.ret

entry.select.merge.dup11:                         ; preds = %entry
  %flag.i64112 = zext i1 %flag to i64
  %flag.f64213 = uitofp i64 %flag.i64112 to double
  %flag.f32314 = fptrunc double %flag.f64213 to float
  %flag.f64.ext415 = fpext float %flag.f32314 to double
  %is.zero516 = fcmp oeq double %flag.f64.ext415, 0.000000e+00
  br i1 %is.zero516, label %left.dup18, label %right.dup19

right.dup19:                                      ; preds = %entry.select.merge.dup11
  call void @__quantum__qis__reset__body(%Qubit* inttoptr (i64 3 to %Qubit*))
  br label %common.ret

left.dup18:                                       ; preds = %entry.select.merge.dup11
  call void @__quantum__qis__reset__body(%Qubit* inttoptr (i64 3 to %Qubit*))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(%Qubit*)
